--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,12 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+
+	<div>
+		<p>
+			Petite phrase pour faire l'exercice git !!
+		</p>
+	</div>
 		
 	
 </body></html>
