--- a/hello.html
+++ b/hello.html
@@ -17,11 +17,25 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 
+		<!-- description exercice -->
 	<div>
+		<h1>
+			Ma description
+		</h1>
 		<p>
 			Petite phrase pour faire l'exercice git !!
 		</p>
 	</div>
+
+		<!-- Récompenses -->
+		<div>
+			<h1>
+				Mes récompenses
+			</h1>
+			<p>
+				en construction
+			</p>
+		</div>
 		
 	
 </body></html>
